to co je na webu

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Outfit&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css"
+    />
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui"
+      content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui"
     />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>OdhadyJurdova.cz</title>
+    <meta
+      name="keywords"
+      content="Natálie Jurdova, odhadyjurdova.cz Natalie Jurdova, Odhady nemovitosti, Jurdova odhady, odhadynemovitost.cz, třebíč jurdova, ceske budejovice, budweis, nemovitosti, sluzby, rodinny dum, baraky, byty, kancelare, bytove domy"
+    />
+    <meta
+      name="description"
+      content="OdhadyNemovitosti,odhadyjurdova.cz, odhadynemovitosti.cz, Jurdova odhady, Natalie Jurdova, Natálie Jurdova, jurdova, třebíč, barak, dum, rodinne, rodinny dum, kancelar, sluzby"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/images/fav_icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/images/fav_icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/images/fav_icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./src/images/fav_icons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./src/images/fav_icons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <h1 class="seo" style="display: none">
+      odhadyjurdova.cz, OdhadyNemovitosti, Natalie Jurdova, Natalie, Jurdova,
+      Natalia Jurdová, odhadynemovitosti.cz OdhadyJurdova, nemovitosti, nemovité
+      věci, Odhady, rodinne domy, byt, dum, kandelar, bytovy dum, sluzby, ceske
+      budejovice, budweis
+    </h1>
     <div id="root"></div>
   </body>
 </html>
